# open-webui

./: Makefile  NEXT_STAGE_PROMPT.md  TEST_CHECKLIST.md  run-tui.sh
backend/mcp-server-rust/: Cargo.toml  README.md
backend/mcp-server-rust/src/: main.rs  tools.rs
clients/rust-tui/: Cargo.toml  README.md
clients/rust-tui/src/: main.rs  mcp.rs  ui.rs
clients/rust-tui/src/api/: mod.rs
