[package]
name = "mcp-server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.11.0", features = ["server", "transport-io", "schemars"] }
rmcp-macros = "0.11.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
schemars = "1.1.0"
shlex = "1.3.0"
